--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 -e git+https://github.com/clemsciences/cltk.git@old-norse-verbs#egg=cltk
 numpy
 -e git+https://github.com/cltk/old_norse_dictionary_zoega.git#egg=zoegas
+-e git+https://github.com/clemsciences/old_norse_texts_heimskringla.git#egg=eddas
